--- a/store/blocks/desktop/components/header/searchbar.jsonc
+++ b/store/blocks/desktop/components/header/searchbar.jsonc
@@ -1,5 +1,6 @@
 {
   "search-bar#header__search": {
+    "title": "searchbar",
     "blocks": ["autocomplete-result-list.v2"],
     "props": {
       "openAutocompleteOnFocus": true,
@@ -9,6 +10,7 @@
     }
   },
   "autocomplete-result-list.v2": {
+    "title": "search bar autocomplete",
     "blocks": ["product-summary"],
     "props": {
       "productLayout": "VERTICAL",
