--- a/store/blocks/desktop/screen/footer.jsonc
+++ b/store/blocks/desktop/screen/footer.jsonc
@@ -1,5 +1,6 @@
 {
   "footer-layout.desktop": {
+    "title": "footer layout desktop",
     "children": ["flex-layout.row#footer__container-desktop"]
   }
 }
