--- a/store/blocks/desktop/components/footer/footer_layout.jsonc
+++ b/store/blocks/desktop/components/footer/footer_layout.jsonc
@@ -1,8 +1,10 @@
 {
   "flex-layout.row#footer__container-desktop": {
+    "title": "footer desktop container",
     "children": ["flex-layout.col#footer__container-desktop"]
   },
   "flex-layout.col#footer__container-desktop": {
+    "title": "footer desktop inner container",
     "children": [
       "flex-layout.row#footer__payments-container",
       "flex-layout.row#footer__content"
