--- a/store/blocks/desktop/components/header/menu-items.jsonc
+++ b/store/blocks/desktop/components/header/menu-items.jsonc
@@ -1,5 +1,6 @@
 {
   "menu-item#shop-desktop": {
+    "title": "item shop",
     "props": {
       "id": "menu-item-shop",
       "type": "custom",
@@ -14,6 +15,7 @@
     }
   },
   "menu-item#games-desktop": {
+    "title": "item games",
     "props": {
       "id": "menu-item-games",
       "type": "custom",
@@ -28,6 +30,7 @@
     "blocks": ["submenu#department__platforms-level1-desktop"]
   },
   "menu-item#gift_cards-desktop": {
+    "title": "item gift cards",
     "props": {
       "id": "menu-item-gift_cards",
       "type": "custom",
@@ -43,6 +46,7 @@
     "blocks": ["submenu#department__platforms-level1-desktop"]
   },
   "menu-item#game_points-desktop": {
+    "title": "item game points",
     "props": {
       "id": "menu-item-game_points",
       "type": "custom",
@@ -58,6 +62,7 @@
     "blocks": ["submenu#department__platforms-level1-desktop"]
   },
   "menu-item#xbox-desktop": {
+    "title": "item xbox",
     "props": {
       "id": "menu-item-xbox",
       "type": "custom",
@@ -73,6 +78,7 @@
     "blocks": ["submenu#department__platforms-level1-desktop"]
   },
   "menu-item#psn-desktop": {
+    "title": "item PSN",
     "props": {
       "id": "menu-item-psn",
       "type": "custom",
@@ -88,6 +94,7 @@
     "blocks": ["submenu#department__platforms-level1-desktop"]
   },
   "menu-item#nintendo_online-desktop": {
+    "title": "item nintendo online",
     "props": {
       "id": "menu-item-nintendo_online",
       "type": "custom",
@@ -103,6 +110,7 @@
     "blocks": ["submenu#department__platforms-level1-desktop"]
   },
   "menu-item#software-desktop": {
+    "title": "item software",
     "props": {
       "id": "menu-item-software",
       "type": "custom",
