--- a/store/blocks/desktop/components/home/banner_images.jsonc
+++ b/store/blocks/desktop/components/home/banner_images.jsonc
@@ -1,8 +1,10 @@
 {
   "responsive-layout.desktop#home__banner-desktop": {
+    "title": "banner container desktop",
     "children": ["flex-layout.row#home__banner-desktop"]
   },
   "flex-layout.row#home__banner-desktop": {
+    "title": "banner images",
     "children": [
       "image#home__banner--one",
       "image#home__banner--two",
