fix: titles components in global layout

--- a/store/blocks/global/components/footer/copyright.jsonc
+++ b/store/blocks/global/components/footer/copyright.jsonc
@@ -1,8 +1,10 @@
 {
   "flex-layout.row#footer__copyright": {
+    "title": "footer copyright section",
     "children": ["flex-layout.col#footer__copyright"]
   },
   "flex-layout.col#footer__copyright": {
+    "title": "copyright content",
     "children": [
       "rich-text#copyright__first-paragraph",
       "rich-text#copyright__second-paragraph",
@@ -10,18 +12,21 @@
     ]
   },
   "rich-text#copyright__first-paragraph": {
+    "title": "copyright first-paragraph",
     "props": {
       "text": "Copyright © 2022 Eneba. Todos los derechos reservados. SA “Helis play”, C/Gyneju 4-333, Vilnius, República de Lituania",
       "blockClass": "copyright__first-paragraph"
     }
   },
   "rich-text#copyright__second-paragraph": {
+    "title": "copyright second-paragraph",
     "props": {
       "text": "Términos y Condiciones, Aviso de Privacidad,",
       "blockClass": "copyright__second-paragraph"
     }
   },
   "rich-text#copyright__third-paragraph": {
+    "title": "copyright third-paragraph",
     "props": {
       "text": "Preferencias de las cookies.",
       "blockClass": "copyright__third-paragraph"
