--- a/store/blocks/global/components/footer/footer_link_options.jsonc
+++ b/store/blocks/global/components/footer/footer_link_options.jsonc
@@ -1,5 +1,6 @@
 {
   "flex-layout.col#footer__about_eneba": {
+    "title": "footer about section",
     "children": [
       "rich-text#about_eneba__title",
       "link#footer__about_us",
@@ -11,12 +12,14 @@
     }
   },
   "rich-text#about_eneba__title": {
+    "title": "footer about title",
     "props": {
       "text": "Sobre Eneba",
       "blockClass": "footer__option-title"
     }
   },
   "link#footer__about_us": {
+    "title": "link about us",
     "props": {
       "href": "/about_us",
       "label": "Sobre nosotros",
@@ -25,6 +28,7 @@
     }
   },
   "link#footer__contact_us": {
+    "title": "link contact us",
     "props": {
       "href": "/contact_us",
       "label": "Contáctanos",
@@ -33,6 +37,7 @@
     }
   },
   "link#footer__careers": {
+    "title": "link careers",
     "props": {
       "href": "/careers",
       "label": "Empleo",
@@ -41,6 +46,7 @@
     }
   },
   "flex-layout.col#footer__buy": {
+    "title": "footer buy section",
     "children": [
       "rich-text#buy__title",
       "link#footer__how_buy",
@@ -52,12 +58,14 @@
     }
   },
   "rich-text#buy__title": {
+    "title": "buy title",
     "props": {
       "text": "Comprar",
       "blockClass": "footer__option-title"
     }
   },
   "link#footer__how_buy": {
+    "title": "link how buy",
     "props": {
       "href": "/how_buy",
       "label": "Cómo comprar",
@@ -66,6 +74,7 @@
     }
   },
   "link#footer__list_games": {
+    "title": "link list of games",
     "props": {
       "href": "/list_games",
       "label": "Lista de juegos",
@@ -74,6 +83,7 @@
     }
   },
   "link#footer__collections": {
+    "title": "link collections",
     "props": {
       "href": "/collections",
       "label": "Colecciones",
@@ -82,6 +92,7 @@
     }
   },
   "flex-layout.col#footer__help": {
+    "title": "footer help section",
     "children": [
       "rich-text#help__title",
       "link#footer__faq",
@@ -93,12 +104,14 @@
     }
   },
   "rich-text#help__title": {
+    "title": "help title",
     "props": {
       "text": "Ayuda",
       "blockClass": "footer__option-title"
     }
   },
   "link#footer__faq": {
+    "title": "link faq",
     "props": {
       "href": "/faq",
       "label": "FAQ",
@@ -107,6 +120,7 @@
     }
   },
   "link#footer__activate_game": {
+    "title": "link activate game",
     "props": {
       "href": "/activate_game",
       "label": "Cómo activar el juego",
@@ -115,6 +129,7 @@
     }
   },
   "link#footer__ticket": {
+    "title": "link ticket",
     "props": {
       "href": "/ticket",
       "label": "Crear un ticket",
@@ -123,6 +138,7 @@
     }
   },
   "flex-layout.col#community": {
+    "title": "footer community section",
     "children": [
       "rich-text#community__title",
       "link#footer__blog",
@@ -134,12 +150,14 @@
     }
   },
   "rich-text#community__title": {
+    "title": "community title",
     "props": {
       "text": "Comunidad",
       "blockClass": "footer__option-title"
     }
   },
   "link#footer__blog": {
+    "title": "link blog",
     "props": {
       "href": "/blog",
       "label": "Blog",
@@ -148,6 +166,7 @@
     }
   },
   "link#footer__giveaways": {
+    "title": "link giveaways",
     "props": {
       "href": "/giveaways",
       "label": "Sorteos",
@@ -156,6 +175,7 @@
     }
   },
   "link#footer__affiliate": {
+    "title": "link affiliate",
     "props": {
       "href": "/affiliate",
       "label": "Conviértete en afiliado",
@@ -164,18 +184,21 @@
     }
   },
   "flex-layout.col#professional": {
+    "title": "footer professional section",
     "children": ["rich-text#professional__title", "link#footer__sells_eneba"],
     "props": {
       "blockClass": "footer__option-container"
     }
   },
   "rich-text#professional__title": {
+    "title": "professional title",
     "props": {
       "text": "Profesional",
       "blockClass": "footer__option-title"
     }
   },
   "link#footer__sells_eneba": {
+    "title": "link sells",
     "props": {
       "href": "/sells_eneba",
       "label": "Vende en Eneba",
@@ -187,6 +210,7 @@
     }
   },
   "flex-layout.col#follow_us": {
+    "title": "footer follow us section",
     "children": [
       "rich-text#follow_us__title",
       "flex-layout.row#follow_us-social_network"
@@ -196,12 +220,14 @@
     }
   },
   "rich-text#follow_us__title": {
+    "title": "follow us title",
     "props": {
       "text": "Seguirnos",
       "blockClass": "footer__option-title"
     }
   },
   "flex-layout.row#follow_us-social_network": {
+    "title": "social network icons",
     "children": [
       "logo#social__facebook",
       "logo#social__twitter",
