--- a/store/blocks/global/components/footer/partners.jsonc
+++ b/store/blocks/global/components/footer/partners.jsonc
@@ -1,11 +1,13 @@
 {
   "flex-layout.row#footer__partners": {
+    "title": "footer partners container",
     "children": ["flex-layout.col#footer__partners"],
     "props": {
       "blockClass": "footer__partners-container"
     }
   },
   "flex-layout.col#footer__partners": {
+    "title": "footer partners content",
     "children": [
       "rich-text#partners__title",
       "flex-layout.row#partners__logos-container"
@@ -15,12 +17,14 @@
     }
   },
   "rich-text#partners__title": {
+    "title": "partners title",
     "props": {
       "text": "Un orgulloso socio de",
       "blockClass": "footer__partner-title"
     }
   },
   "flex-layout.row#partners__logos-container": {
+    "title": "partners logos container",
     "children": ["logo#partners__konami", "logo#partners__team17"],
     "props": {
       "preserveLayoutOnMobile": true,
@@ -29,6 +33,7 @@
     }
   },
   "logo#partners__konami": {
+    "title": "konami logo",
     "props": {
       "title": "konami",
       "url": "assets/svg/footer/konami.svg",
@@ -38,6 +43,7 @@
     }
   },
   "logo#partners__team17": {
+    "title": "team17 logo",
     "props": {
       "title": "team17",
       "url": "assets/svg/footer/team17.svg",
