--- a/store/blocks/global/components/footer/payments_icons.jsonc
+++ b/store/blocks/global/components/footer/payments_icons.jsonc
@@ -1,5 +1,6 @@
 {
   "flex-layout.row#footer__payments-container": {
+    "title": "footer payments content",
     "children": [
       "logo#payment__eneba",
       "logo#payment__visa",
@@ -16,6 +17,7 @@
     }
   },
   "logo#payment__eneba": {
+    "title": "eneba wallet logo",
     "props": {
       "title": "payment eneba",
       "url": "assets/svg/payments/eneba.svg",
@@ -25,6 +27,7 @@
     }
   },
   "logo#payment__visa": {
+    "title": "visa logo",
     "props": {
       "title": "payment visa",
       "url": "assets/svg/payments/visa_mastercard.svg",
@@ -34,6 +37,7 @@
     }
   },
   "logo#payment__paypal": {
+    "title": "paypal logo",
     "props": {
       "title": "payment paypal",
       "url": "assets/svg/payments/paypal.svg",
@@ -43,6 +47,7 @@
     }
   },
   "logo#payment__pse": {
+    "title": "pse logo",
     "props": {
       "title": "payment pse",
       "url": "assets/svg/payments/pse.svg",
@@ -52,6 +57,7 @@
     }
   },
   "logo#payment__efecty": {
+    "title": "efecty logo",
     "props": {
       "title": "payment efecty",
       "url": "assets/svg/payments/efecty.svg",
@@ -61,6 +67,7 @@
     }
   },
   "logo#payment__payvalida": {
+    "title": "payvalida logo",
     "props": {
       "title": "payment payvalida",
       "url": "assets/svg/payments/pay_valida.svg",
@@ -70,6 +77,7 @@
     }
   },
   "logo#payment__efecty_gana_baloto_cash": {
+    "title": "efecty logo",
     "props": {
       "title": "payment efecty gana baloto cash",
       "url": "assets/svg/payments/efecty_gana_baloto_cash.svg",
