--- a/store/blocks/global/components/header/navbar-icons.jsonc
+++ b/store/blocks/global/components/header/navbar-icons.jsonc
@@ -1,10 +1,12 @@
 {
   "flex-layout.col#spacer": {
+    "title": "space",
     "props": {
       "width": "grow"
     }
   },
   "logo#main__logo": {
+    "title": "eneba logo",
     "props": {
       "title": "Logo",
       "href": "/",
@@ -14,24 +16,25 @@
     }
   },
   "logo#main__heart": {
+    "title": "like logo",
     "props": {
       "title": "Heart",
-      /* "href": "/", */
       "url": "assets/svg/heartIconMobile.svg",
       "width": "24",
       "blockClass": "header-icon"
     }
   },
   "logo#main__Login": {
+    "title": "login logo",
     "props": {
       "title": "Login",
-      /* "href": "/", */
       "url": "assets/svg/loginIconMobile.svg",
       "width": "24",
       "blockClass": "header-icon"
     }
   },
   "logo#main__Search": {
+    "title": "search logo",
     "props": {
       "title": "Search",
       "url": "assets/svg/searchIconMobile.svg",
