--- a/store/blocks/global/components/home/best_games-product-shelf.jsonc
+++ b/store/blocks/global/components/home/best_games-product-shelf.jsonc
@@ -1,11 +1,13 @@
 {
   "flex-layout.row#best_games-shelf": {
+    "title": "best games shelf container",
     "children": ["flex-layout.col#best_games-container"],
     "props": {
       "blockClass": "best_games-shelf"
     }
   },
   "flex-layout.col#best_games-container": {
+    "title": "best games shelf content",
     "children": [
       "rich-text#best_games-title",
       "responsive-layout.phone#product__shelf-content",
@@ -18,6 +20,7 @@
     }
   },
   "rich-text#best_games-title": {
+    "title": "best games title",
     "props": {
       "text": "Los mejores juegos (Digital)",
       "textAlignment": "CENTER",
@@ -26,6 +29,7 @@
     }
   },
   "link#showmore__best_games": {
+    "title": "show more games button",
     "props": {
       "href": "/best_games",
       "label": "Cargar más",
