--- a/store/blocks/global/components/home/buy_now-product-shelf.jsonc
+++ b/store/blocks/global/components/home/buy_now-product-shelf.jsonc
@@ -1,11 +1,13 @@
 {
   "flex-layout.row#buy_now-shelf": {
+    "title": "buy now shelf container",
     "children": ["flex-layout.col#buy_now__container"],
     "props": {
       "blockClass": "buy_now-shelf"
     }
   },
   "flex-layout.col#buy_now__container": {
+    "title": "buy now shelf content",
     "children": [
       "rich-text#buy_now-title",
       "responsive-layout.phone#product__shelf-content",
@@ -18,6 +20,7 @@
     }
   },
   "rich-text#buy_now-title": {
+    "title": "buy now title",
     "props": {
       "text": "Compra inmediata Black Sale",
       "textAlignment": "CENTER",
@@ -26,6 +29,7 @@
     }
   },
   "link#showmore__buy_now": {
+    "title": "buy now show more button",
     "props": {
       "href": "/buy-now",
       "label": "Cargar más",
