--- a/store/blocks/global/components/home/recommendations-product-shelf.jsonc
+++ b/store/blocks/global/components/home/recommendations-product-shelf.jsonc
@@ -1,11 +1,13 @@
 {
   "flex-layout.row#recommendations-shelf": {
+    "title": "recommendations shelf container",
     "children": ["flex-layout.col#recommendations__container"],
     "props": {
       "blockClass": "recommendations-shelf"
     }
   },
   "flex-layout.col#recommendations__container": {
+    "title": "recommendations shelf content",
     "children": [
       "rich-text#recommendations__title",
       "responsive-layout.phone#product__shelf-content",
@@ -18,6 +20,7 @@
     }
   },
   "rich-text#recommendations__title": {
+    "title": "recommendations title",
     "props": {
       "text": "Recomendaciones para ti",
       "textAlignment": "CENTER",
@@ -26,6 +29,7 @@
     }
   },
   "link#showmore__recommendations": {
+    "title": "recommendations show more button",
     "props": {
       "href": "/recommended-for-you",
       "label": "Mostrar todo",
