--- a/store/blocks/global/components/home/shelf_layout.jsonc
+++ b/store/blocks/global/components/home/shelf_layout.jsonc
@@ -1,5 +1,6 @@
 {
   "slider-layout#product__shelf-layout": {
+    "title": "slider layout",
     "props": {
       "itemsPerPage": {
         "desktop": 5,
