--- a/store/blocks/phone/screen/header.jsonc
+++ b/store/blocks/phone/screen/header.jsonc
@@ -1,5 +1,6 @@
 {
   "header-layout.mobile": {
+    "title": "header mobile",
     "children": [
       "responsive-layout.phone#header__sticky-mobile",
       "responsive-layout.tablet#header__tablet"
