--- a/store/blocks/phone/components/header/submenu-lvl-II.jsonc
+++ b/store/blocks/phone/components/header/submenu-lvl-II.jsonc
@@ -1,8 +1,10 @@
 {
   "submenu.accordion#department__platforms-level2": {
+    "title": "platform sub item container",
     "children": ["menu#department__platforms-level2"]
   },
   "menu#department__platforms-level2": {
+    "title": "platform subitem list",
     "props": {
       "orientation": "vertical"
     },
@@ -22,6 +24,7 @@
     ]
   },
   "menu-item#category__steam-games": {
+    "title": "steam category subitem",
     "props": {
       "id": "category__steam-games",
       "type": "custom",
@@ -36,6 +39,7 @@
     }
   },
   "menu-item#category__xbox-games": {
+    "title": "xbox category subitem",
     "props": {
       "id": "category__xbox-games",
       "type": "custom",
@@ -50,6 +54,7 @@
     }
   },
   "menu-item#category__psn-games": {
+    "title": "psn category subitem",
     "props": {
       "id": "category__psn-games",
       "type": "custom",
@@ -64,6 +69,7 @@
     }
   },
   "menu-item#category__nintendo-games": {
+    "title": "nintendo category subitem",
     "props": {
       "id": "category__nintendo-games",
       "type": "custom",
@@ -78,6 +84,7 @@
     }
   },
   "menu-item#category__origin-games": {
+    "title": "origin category subitem",
     "props": {
       "id": "category__origin-games",
       "type": "custom",
@@ -92,6 +99,7 @@
     }
   },
   "menu-item#category__ubisoft-games": {
+    "title": "ubisoft category subitem",
     "props": {
       "id": "category__origin-games",
       "type": "custom",
@@ -106,6 +114,7 @@
     }
   },
   "menu-item#category__epic-games": {
+    "title": "epic category subitem",
     "props": {
       "id": "category__epic-games",
       "type": "custom",
@@ -120,6 +129,7 @@
     }
   },
   "menu-item#category__gog-games": {
+    "title": "gog category subitem",
     "props": {
       "id": "category__gog-games",
       "type": "custom",
@@ -134,6 +144,7 @@
     }
   },
   "menu-item#category__battle-games": {
+    "title": "battle games category subitem",
     "props": {
       "id": "category__battle-games",
       "type": "custom",
@@ -148,6 +159,7 @@
     }
   },
   "menu-item#category__other-games": {
+    "title": "other games category subitem",
     "props": {
       "id": "category__other-games",
       "type": "custom",
@@ -162,6 +174,7 @@
     }
   },
   "menu-item#category__next-games": {
+    "title": "next games category subitem",
     "props": {
       "id": "category__next-games",
       "type": "custom",
@@ -176,6 +189,7 @@
     }
   },
   "menu-item#category__dlcs": {
+    "title": "dlcs category subitem",
     "props": {
       "id": "category__dlc",
       "type": "custom",
