feature: adding result search page template phone version

--- a/store/blocks/global/components/departments/departments.jsonc
+++ b/store/blocks/global/components/departments/departments.jsonc
@@ -13,7 +13,7 @@
     "title": "search result layout department",
     "blocks": [
       "search-result-layout.desktop#department",
-      /* "search-result-layout.mobile#department", */
+      "search-result-layout.mobile#department",
       "search-not-found-layout"
     ]
   }
