--- a/store/blocks/global/components/home/product_card_layout.jsonc
+++ b/store/blocks/global/components/home/product_card_layout.jsonc
@@ -20,6 +20,15 @@
       "add-to-cart-button"
     ]
   },
+  "flex-layout.col#product__information-no_add_button": {
+    "title": "product information content no add button",
+    "children": [
+      "product-summary-name",
+      "rich-text#product__summary-region",
+      "rich-text#product__summary-at",
+      "product-selling-price"
+    ]
+  },
   "rich-text#product__summary-region": {
     "title": "region text",
     "props": {
