--- a/store/blocks/phone/components/contact_us/contact_us-content.jsonc
+++ b/store/blocks/phone/components/contact_us/contact_us-content.jsonc
@@ -1,62 +1,19 @@
 {
   "flex-layout.row#phone__contact_us-container": {
     "title": "contact us container",
-    "children": ["flex-layout.col#phone__contact_us-container"],
+    "children": ["flex-layout.col#phone__contact_us-content"],
     "props": {
       "blockClass": "phone__contact_us-container"
     }
   },
-  "flex-layout.col#phone__contact_us-container": {
+  "flex-layout.col#phone__contact_us-content": {
     "title": "contact us content",
     "children": [
-      "flex-layout.row#phone__contact_us-ticket--container"
-      /* "flex-layout.row#phone__contact_us-email--container" */
-    ]
-  },
-  "flex-layout.row#phone__contact_us-ticket--container": {
-    "title": "contact us ticket section container",
-    "children": ["flex-layout.col#phone__contact_us-ticket--content"]
-  },
-  "flex-layout.col#phone__contact_us-ticket--content": {
-    "title": "contact us ticket section content",
-    "children": [
-      "rich-text#ticket__title",
-      "rich-text#ticket__content",
-      "flex-layout.row#phone__ticket-link_button"
+      "flex-layout.row#phone__contact_us-ticket--container",
+      "flex-layout.row#phone__contact_us-email--container"
     ],
     "props": {
-      "colSizing": "auto",
-      "blockClass": "phone__contact_us-ticket--content"
-    }
-  },
-  "rich-text#ticket__title": {
-    "title": "ticket title",
-    "props": {
-      "blockClass": "ticket__title",
-      "text": "¿Problemas con la compra?"
-    }
-  },
-  "rich-text#ticket__content": {
-    "title": "ticket content paragraph",
-    "props": {
-      "blockClass": "ticket__content",
-      "text": "La mejor manera de resolverlo rápidamente es [**crear un ticket**](https://developers.vtex.com/vtex-developer-docs/docs/welcome)"
-    }
-  },
-  "flex-layout.row#phone__ticket-link_button": {
-    "title": "link button container",
-    "children": ["link#create_ticket"],
-    "props": {
-      "blockClass": "ticket-link_button--container",
-      "colSizing": "auto"
-    }
-  },
-  "link#create_ticket": {
-    "title": "ticket button link",
-    "props": {
-      "href": "/resolution-center",
-      "label": "Crear ticket ahora",
-      "blockClass": "create_ticket"
+      "blockClass": "phone__contact_us-content"
     }
   }
 }
