feature: adding finish custom page contact us in tablet responsive

--- a/store/blocks/global/screen/contact_us.jsonc
+++ b/store/blocks/global/screen/contact_us.jsonc
@@ -2,9 +2,9 @@
   "store.custom#contact_us": {
     "title": "contact us",
     "blocks": [
-      "responsive-layout.phone#contact_us"
-      /* "responsive-layout.tablet#contact_us",
-      "responsive-layout.desktop#contact_us" */
+      "responsive-layout.phone#contact_us",
+      "responsive-layout.tablet#contact_us"
+      /* "responsive-layout.desktop#contact_us" */
     ]
   }
 }
