--- a/store/blocks/phone/components/contact_us/email-content.jsonc
+++ b/store/blocks/phone/components/contact_us/email-content.jsonc
@@ -1,117 +1,9 @@
 {
   "flex-layout.row#phone__contact_us-email--container": {
-    "children": ["flex-layout.col#phone__contact_us-email--content"],
+    "title": "contact us email section container",
+    "children": ["flex-layout.col#contact_us-email--content"],
     "props": {
       "blockClass": "phone__contact_us-email--container"
-    }
-  },
-  "flex-layout.col#phone__contact_us-email--content": {
-    "children": [
-      "flex-layout.row#phone__email-business",
-      "flex-layout.row#phone__email-legal",
-      "flex-layout.row#phone__email-talent"
-    ],
-    "props": {
-      "blockClass": "phone__contact_us-email--content"
-    }
-  },
-  "flex-layout.row#phone__email-business": {
-    "children": ["flex-layout.col#phone__email-business"]
-  },
-  "flex-layout.col#phone__email-business": {
-    "children": [
-      "rich-text#business__title",
-      "rich-text#business__text",
-      "link#business__eneba"
-    ],
-    "props": {
-      "blockClass": "phone__email-item--content"
-    }
-  },
-  "rich-text#business__title": {
-    "props": {
-      "text": "Desarrollo de Negocios",
-      "blockClass": "email__section-title"
-    }
-  },
-  "rich-text#business__text": {
-    "props": {
-      "text": "¿Quieres trabajar con nosotros o tienes preguntas relacionadas sobre el negocio? Contáctanos en:",
-      "blockClass": "email__section-text"
-    }
-  },
-  "link#business__eneba": {
-    "title": "business eneba",
-    "props": {
-      "href": "mailto:business@eneba.com",
-      "label": "business@eneba.com",
-      "blockClass": "contact_us-email--link"
-    }
-  },
-  "flex-layout.row#phone__email-legal": {
-    "children": ["flex-layout.col#phone__email-legal"]
-  },
-  "flex-layout.col#phone__email-legal": {
-    "children": [
-      "rich-text#legal__title",
-      "rich-text#legal__text",
-      "link#legal__eneba"
-    ],
-    "props": {
-      "blockClass": "phone__email-item--content"
-    }
-  },
-  "rich-text#legal__title": {
-    "props": {
-      "text": "Departamento legal",
-      "blockClass": "email__section-title"
-    }
-  },
-  "rich-text#legal__text": {
-    "props": {
-      "text": "Si tienes preguntas sobre asuntos legales, contáctanos en:",
-      "blockClass": "email__section-text"
-    }
-  },
-  "link#legal__eneba": {
-    "title": "legal eneba",
-    "props": {
-      "href": "mailto:legal@eneba.com",
-      "label": "legal@eneba.com",
-      "blockClass": "contact_us-email--link"
-    }
-  },
-  "flex-layout.row#phone__email-talent": {
-    "children": ["flex-layout.col#phone__email-talent"]
-  },
-  "flex-layout.col#phone__email-talent": {
-    "children": [
-      "rich-text#talent__title",
-      "rich-text#talent__text",
-      "link#talent__eneba"
-    ],
-    "props": {
-      "blockClass": "phone__email-item--content"
-    }
-  },
-  "rich-text#talent__title": {
-    "props": {
-      "text": "Equipo de Talento",
-      "blockClass": "email__section-title"
-    }
-  },
-  "rich-text#talent__text": {
-    "props": {
-      "text": "¿Buscando un nuevo trabajo? Ponte en contacto con nuestro equipo de Talento en:",
-      "blockClass": "email__section-text"
-    }
-  },
-  "link#talent__eneba": {
-    "title": "talent eneba",
-    "props": {
-      "href": "mailto:jobs@eneba.com",
-      "label": "jobs@eneba.com",
-      "blockClass": "contact_us-email--link"
     }
   }
 }
