feature: adding finish custom page contact us in desktop responsive

--- a/store/blocks/global/screen/contact_us.jsonc
+++ b/store/blocks/global/screen/contact_us.jsonc
@@ -3,8 +3,8 @@
     "title": "contact us",
     "blocks": [
       "responsive-layout.phone#contact_us",
-      "responsive-layout.tablet#contact_us"
-      /* "responsive-layout.desktop#contact_us" */
+      "responsive-layout.tablet#contact_us",
+      "responsive-layout.desktop#contact_us"
     ]
   }
 }
