feature: adding wishlist functionality and change icon

--- a/store/blocks/phone/components/departments/product_card_layout.jsonc
+++ b/store/blocks/phone/components/departments/product_card_layout.jsonc
@@ -6,7 +6,8 @@
     "children": [
       "flex-layout.col#product__image",
       "flex-layout.col#product__information-no_add_button",
-      "logo#product__button-like"
+      "add-to-list-btn"
+      /* "logo#product__button-like" */
     ],
     "props": {
       "preserveLayoutOnMobile": true,
