feature: add pdp layout v2 mobile

--- a/store/blocks/global/components/footer/footer_link_options.jsonc
+++ b/store/blocks/global/components/footer/footer_link_options.jsonc
@@ -30,7 +30,7 @@
   "link#footer__contact_us": {
     "title": "link contact us",
     "props": {
-      "href": "/contact_us",
+      "href": "/contact-us",
       "label": "Contáctanos",
       "blockClass": "footer__option",
       "displayMode": "anchor"
