--- a/store/blocks/mobile/components/pdp/pdp-layout.jsonc
+++ b/store/blocks/mobile/components/pdp/pdp-layout.jsonc
@@ -11,10 +11,10 @@
     "children": [
       "flex-layout.row#product__main_detail-container",
       "flex-layout.row#product__check_price-container",
-      "flex-layout.row#product__key_activation-container"
-      /* "flex-layout.row#product__reviews-container",
+      "flex-layout.row#product__key_activation-container",
       "flex-layout.row#shelf__related_products-container",
-      "flex-layout.row#product__description-container" */
+      "flex-layout.row#product__reviews-container"
+      /* "flex-layout.row#product__description-container" */
     ],
     "props": {
       "blockClass": "mobile__pdp-content"
